fix(Profile): styling overflow
- fixed some overflow styling issues

References #Profile

--- a/src/main/resources/static/styles/profile.css
+++ b/src/main/resources/static/styles/profile.css
@@ -11,11 +11,12 @@ img.profile-image {
     display: flex;
     width: 100%;
     height: calc(100vh - 3.5em);
+    overflow: hidden;
 }
 
 .profile-info-wrapper .sidebar-left {
     background: white;
-    height: 100%;
+    height: auto;
     width: 100%;
     flex-grow: 0;
     flex-shrink: 0;
@@ -28,6 +29,7 @@ img.profile-image {
 .profile-info-wrapper .sidebar-content-right {
     height: 100%;
     width: 100%;
+    overflow-y: scroll;
 }
 
 .profile-info .p-info-wrapper {
